base_aux/webs_front/d1_front2_css/universal_root.css
/* -------------------------------------------------------------------------------------------------------------------*/
@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wdth@8..144,25..151&display=swap');

/* -------------------------------------------------------------------------------------------------------------------*/
/* important
    color: white !important;
 */

/* ================================================================================================================== */
/* -------------------- BUILDIN --------------------*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background: #fff;
    font-family: system-ui, 'Segoe UI', 'Roboto', 'Helvetica Neue', sans-serif; /*с этим чуть лучше! чем дефолтный!!!*/
    padding: 1.2rem;

    max-width: 1400px;
    margin: 0 auto;
    border-radius: 2rem;
    //overflow: hidden;

    box-shadow: 0 20px 35px -12px rgba(0, 0, 0, 0.1);

    display: flex;
    flex-direction: column;
    min-height: 100vh;          /* вся высота окна браузера */
}

hr {
    margin: 1rem 0;
}

[disabled] {
    opacity: 0.5;
    cursor: not-allowed;
    pointer-events: none;
}

html {
    scroll-behavior: smooth;  /* глобальная плавная прокрутка */
}
/* Отступ для фиксированной навигации (если есть sticky) */
:target {
    scroll-margin-top: 80px;
}

/* -------------------- ROOT -----------------*/
body > header {
    display: flex;
    justify-content: space-between;
    align-items: center;

    /* separator */
    border-bottom: 1px solid #444;
    margin-bottom: 1rem;
}
body > header h1 {
    font-size: 2.2rem;
    font-weight: 700;
    margin-bottom: 0.5rem;
}

body > nav {
    /* stick top */
    position: sticky;
    top: 0;
    background: white;  /* нужно, чтобы не просвечивало содержимое */
    z-index: 100;

    /* other */
    display: flex;
    flex-wrap: wrap;

    /* separator */
    border-bottom: 1px solid #444;
    padding-bottom: 0.5rem;
}

body > main {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;

    flex: 1;                    /* занимает всё доступное место между header и footer */

    /* separator */
    /* NO */
}

body > footer {
    text-align: center;
    font-size: 0.8rem;
    color: #5b6e8c;

    /* separator */
    border-top: 1px solid #444;
    margin-top: 1rem;
    _padding-top: 0.5rem;
}

/* ================================================================================================================== */
/*----------------- DEBUG ----------------*/
/*--------------------------------------------------------------------------------------------------------------------*/
/* VISUAL SELECTING ALL BLOCKS
ON PRODUCTION - COMMENT OUT!
*/
span,
div, p,
form,
ul, ol, dl,
section, article,
header, main, footer,
blockquote, cite,
body, html
{
    border: 1px dashed #aaa5;    /* НЕЛЬЗЯ СТАВИТЬ ВООБЩЕ НА ВСЕ!!! сломаются как минимум ProgressMeter!!! */
}

/* назначение -
1. поставить этот атрибут на элемент который должен быть обработан скриптом (например клонер)
2. скрипт должен после обработки в конце если процесс прошел успешно убрать этот атрибут
3. тоесть если скрипт не отработал процесс - то атрибут убран не будет, и значит будет сохранено предупреждение визуально
*/
[data-attr__delete_on_process]
{
    background: #f005 !important;
    color: #f00 !important;
    border: 4px #f00 dotted !important;
}
[data-attr__delete_on_process]::before {
    content: "❌";
    font-size: 2rem;
}
[data-attr__delete_on_process]::after {
    content: "❌";
    font-size: 2rem;
}

/* ================================================================================================================== */
/* -------------------------------------------------------------------------------------------------------------------*/
[data-skip]
{
    /* just mark to skip in some cases */
}

[data-counter_index]
{
    display: inline-block;
    text-align: center;

    font-size: 0.8rem;
    min-width: 1.6rem;
    border-radius: 0.4rem;

    border: 1px solid #000;

    user-select: none;
}

/* -------------------------------------------------------------------------------------------------------------------*/
/* items for visual explorations */
[data-item_square],
[data-item_rounded]
{
    padding: 1rem;
    text-align: center;

    border: 1px solid black;

    color: black;
    text-shadow: 0 0 3px white;

    background: #0ff3;
}
[data-item_rounded]
{
    border-radius: 2rem;
}

/* ================================================================================================================== */
/* -------------------------------------------------------------------------------------------------------------------*/
/* !IMPORTANT === inline styles - имеют приоритет!!! поэтому нужно его перебить!!! */
[data-all_revert] { all: revert !important; }
[data-action_hover__all_revert]:hover { all: revert !important; }

[data-action_hover__transform_revert]:hover { transform: revert !important; }
[data-action_hover__shadow]:hover { box-shadow: 0 4px 8px rgba(0,0,0,0.5); }

[data-cursor__clickable]    { cursor: pointer; /* no hover!!!*/ }

/* ---------------- SELECTIONS -------------------- */
[data-mouse_select__all] { user-select: all; }
[data-mouse_select__none] { user-select: none; }

/* ---------------- SCROLLING ----------------------*/
[data-overflow_auto]
{
    overflow: auto;  /* add scroll bars if overflow */
}

/* ---------------- ALIGN ----------------------*/
[data-align_center]   /* applicable for text and blocks! */
{
    display: flex;
    flex-direction: column;

    align-items: center;
    justify-content: center;

    text-align: center; /* страховка для вложенных строк */
}
/* ... */

